home page update

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ a:hover {
 }
 /*--banner start here--*/
 .banner {
-    background: url(../images/dope.png)no-repeat;
+    background: url(../images/home.png)no-repeat;
     min-height: 800px;
     background-size: cover;
 	position:relative;
